feat: mise à jour de testimonial avec liaison projets
